src/test/deca/context/invalid/provided/ContextSansObjet/OperationsArithmetique/DivideString.deca
//Description :
//	Vérification contextuelle de l'opérateur / avec des variables string
//
//Résultats :
//	ligne 8 : les opérateurs doivent ètre de type numérique (int ou float)
{
    string x = "Hello, ";
    string y = "world" / 3;
}